--- a/_publications/2024-06-11-TTFields-SABI2023.md
+++ b/_publications/2024-06-11-TTFields-SABI2023.md
@@ -2,13 +2,13 @@
 title: "Optimized Transcranial Brain Stimulation for Tumor Treating Fields"
 collection: publications
 category: conferences
-permalink: /publication/2024-02-17-paper-title-number-4
+permalink: /publication/2024-02-11-TTFields-SABI2023
 excerpt: 'This paper is about optimizing a technique called "TTFields", used as an alternative treatment for brain tumors by applying an electric field in the tumoral region.'
 date: 2024-06-11
 venue: 'Advances in Bioengineering and Clinical Engineering'
 slidesurl: 'http://danteandrinolo.github.io/files/TTFieldsSABI2023Presentation.pdf'
 paperurl: 'http://danteandrinolo.github.io/files/TTFieldsSABI2023Paper.pdf'
-citation: 'Dante C. Andrinolo O., M. Fernández-Corazza, and C. Muravchik. Optimized Transcranial Brain Stimulation for Tumor Treating Fields. Advances in Bioengineering and Clinical Engineering. SABI 2023. IFMBE Proceedings, vol 114., 2024'
+citation: 'Dante C. Andrinolo O., M. Fernández-Corazza, and C. Muravchik. &quot;Optimized Transcranial Brain Stimulation for Tumor Treating Fields.&quot; <i>Advances in Bioengineering and Clinical Engineering</i>. SABI 2023. IFMBE Proceedings, vol 114., 2024'
 ---
 
 Abstract: Transcranial electrical stimulation (TES) is a field that investigates
