--- a/_publications/2024-02-01-RPIC-PAC2023.md
+++ b/_publications/2024-02-01-RPIC-PAC2023.md
@@ -3,8 +3,8 @@ title: "Phase Amplitude Coupling workflow for mapping EEG signals to standard br
 collection: publications
 category: conferences
 permalink: /publication/2024-02-01-RPIC-PAC2023
-#excerpt: 'In this paper a EEG-based workflow is proposed to map phase-amplitude coupling to standard brain networks using confirmatory factor analysis, validated with synthetic data on realistic head models.'
-date: 2024-11-09
+excerpt: 'In this paper a EEG-based workflow is proposed to map phase-amplitude coupling to standard brain networks using confirmatory factor analysis, validated with synthetic data on realistic head models.'
+date: 2024-02-01
 venue: '2023 IEEE XX Workshop on Information Processing and Control (RPIC)'
 #slidesurl: 'http://danteandrinolo.github.io/files/slides2.pdf'
 paperurl: 'http://danteandrinolo.github.io/files/PAC-RPIC2023Paper.pdf'
