--- a/_posts/2012-08-19-blog-post-1.md
+++ b/_posts/2012-08-19-blog-post-1.md
@@ -1,13 +1,11 @@
 ---
-title: 'Blog Post number 1'
-date: 2012-08-14
-permalink: /posts/2012/08/blog-post-13/
+title: 'Deriving Negative Binomial distribution and its moments'
+date: 2025-12-28
+permalink: /posts/2025/Negative Binomial
 tags:
-  - cool posts
-  - category1
-  - category22
+  - Basic probability
 ---
- sorete
+ sarasa
 This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
 
 Headings are cool
